unpackaged/main/default/objects/Case/fields/Manage_DMS_Instruction_Options__c.field-meta.xml
<CustomField>
    <fullName>Manage_DMS_Instruction_Options__c</fullName>
    <label>Manage DMS Instruction Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Trade Instructions</fullName>
            </value>
            <value>
                <fullName>Raise Cash</fullName>
            </value>
            <value>
                <fullName>Instructions for Future Deposits</fullName>
            </value>
            <value>
                <fullName>Add/Remove Systematic Withdrawals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>