unpackaged/main/default/objects/Case/fields/Management_Style__c.field-meta.xml
<CustomField>
    <fullName>Management_Style__c</fullName>
    <label>Management Style</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>OMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>