unpackaged/main/default/objects/Case/fields/Management_Style_for_Lightning__c.field-meta.xml
<CustomField>
    <fullName>Management_Style_for_Lightning__c</fullName>
    <formula>IF(
INCLUDES(Management_Style__c, &quot;OMS&quot;),
&quot;OMS&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management Style</label>
    <type>Text</type>
</CustomField>