unpackaged/main/default/objects/Case/fields/Medallion_or_Notary_Required__c.field-meta.xml
<CustomField>
    <fullName>Medallion_or_Notary_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medallion or Notary Required</label>
    <type>Checkbox</type>
</CustomField>