unpackaged/main/default/objects/Case/fields/Member_Record_Number_from_PA__c.field-meta.xml
<CustomField>
    <fullName>Member_Record_Number_from_PA__c</fullName>
    <formula>Primary_Account_Owner__r.Member_Record_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Record Number from Person Account</label>
    <type>Text</type>
</CustomField>