unpackaged/main/default/objects/Case/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>