unpackaged/main/default/objects/Case/fields/Money_Type__c.field-meta.xml
<CustomField>
    <fullName>Money_Type__c</fullName>
    <label>Money Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>