unpackaged/main/default/objects/Case/fields/Name_of_Charity__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Charity__c</fullName>
    <label>Name of Charity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>