unpackaged/main/default/objects/Case/fields/Need_Cost_Basis_Information__c.field-meta.xml
<CustomField>
    <fullName>Need_Cost_Basis_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Cost Basis Information</label>
    <type>Checkbox</type>
</CustomField>