unpackaged/main/default/objects/Case/fields/Need_Non_DAO_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Need_Non_DAO_Account_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Non-DAO Account Number</label>
    <type>Checkbox</type>
</CustomField>