unpackaged/main/default/objects/Case/fields/Needs_Principal_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Principal_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Principal Review</label>
    <type>Checkbox</type>
</CustomField>