unpackaged/main/default/objects/Case/fields/New_Account_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Person_Name__c</fullName>
    <label>New Account Person Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>