unpackaged/main/default/objects/Case/fields/New_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>New_Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Beneficiary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (New Beneficiary)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>