unpackaged/main/default/objects/Case/fields/New_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Primary Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (New Primary Owner)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>