unpackaged/main/default/objects/Case/fields/New_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Registration_Type__c</fullName>
    <label>New Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Community Property</fullName>
            </value>
            <value>
                <fullName>JTWROS</fullName>
            </value>
            <value>
                <fullName>Tenants in Common</fullName>
            </value>
            <value>
                <fullName>Tenants in the Entirety</fullName>
            </value>
            <value>
                <fullName>529 Plan</fullName>
            </value>
            <value>
                <fullName>Conservatorship</fullName>
            </value>
            <value>
                <fullName>Coverdell ESA</fullName>
            </value>
            <value>
                <fullName>UGMA/UTMA</fullName>
            </value>
            <value>
                <fullName>Traditional IRA</fullName>
            </value>
            <value>
                <fullName>Roth IRA</fullName>
            </value>
            <value>
                <fullName>Rollover IRA</fullName>
            </value>
            <value>
                <fullName>SEP IRA</fullName>
            </value>
            <value>
                <fullName>401(k) Plan</fullName>
            </value>
            <value>
                <fullName>401(k) Roth</fullName>
            </value>
            <value>
                <fullName>403(b)</fullName>
            </value>
            <value>
                <fullName>457 Plan</fullName>
            </value>
            <value>
                <fullName>457(B) Plan</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Business Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>