unpackaged/main/default/objects/Case/fields/Next_Task__c.field-meta.xml
<CustomField>
    <fullName>Next_Task__c</fullName>
    <label>Next Task</label>
    <length>18</length>
    <type>Text</type>
</CustomField>