unpackaged/main/default/objects/Case/fields/No_SLOA_On_File__c.field-meta.xml
<CustomField>
    <fullName>No_SLOA_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No SLOA On File</label>
    <type>Checkbox</type>
</CustomField>