unpackaged/main/default/objects/Case/fields/No_Template_Found__c.field-meta.xml
<CustomField>
    <fullName>No_Template_Found__c</fullName>
    <defaultValue>true</defaultValue>
    <label>No Template Found</label>
    <type>Checkbox</type>
</CustomField>