unpackaged/main/default/objects/Case/fields/No_Template_Found_Completed_Fields__c.field-meta.xml
<CustomField>
    <fullName>No_Template_Found_Completed_Fields__c</fullName>
    <label>No Template Found Completed Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>