unpackaged/main/default/objects/Case/fields/Number_of_Open_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Tasks__c</fullName>
    <label>Number of Open Tasks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>