unpackaged/main/default/objects/Case/fields/Ops_Initial_Review__c.field-meta.xml
<CustomField>
    <fullName>Ops_Initial_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a checkbox for the operations team to do the initial review of the case.</description>
    <label>Ops Initial Review</label>
    <type>Checkbox</type>
</CustomField>