unpackaged/main/default/objects/Case/fields/Ops_Initial_Review_User__c.field-meta.xml
<CustomField>
    <fullName>Ops_Initial_Review_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the person in the dropdown that completed the initial ops review for the case.</description>
    <label>Ops Initial Review User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>