unpackaged/main/default/objects/Case/fields/Order_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Order_Tickets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Tickets</label>
    <type>Checkbox</type>
</CustomField>