unpackaged/main/default/objects/Case/fields/Original_Alternative_Investments_Experie__c.field-meta.xml
<CustomField>
    <fullName>Original_Alternative_Investments_Experie__c</fullName>
    <label>Original Alternative Investments Experie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>