unpackaged/main/default/objects/Case/fields/Original_Approximate_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Original_Approximate_Annual_Income__c</fullName>
    <label>Original Approximate Annual Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>