unpackaged/main/default/objects/Case/fields/Original_Approximate_Liquid_Assets__c.field-meta.xml
<CustomField>
    <fullName>Original_Approximate_Liquid_Assets__c</fullName>
    <label>Original Approximate Liquid Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>