unpackaged/main/default/objects/Case/fields/Original_Approximate_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Original_Approximate_Net_Worth__c</fullName>
    <label>Original Approximate Net Worth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>