unpackaged/main/default/objects/Case/fields/Original_Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Original_Current_Employer__c</fullName>
    <label>Original Current Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>