unpackaged/main/default/objects/Case/fields/Original_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_of_Birth__c</fullName>
    <label>Original Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>