unpackaged/main/default/objects/Case/fields/Original_Derivatives_Complex_Products__c.field-meta.xml
<CustomField>
    <fullName>Original_Derivatives_Complex_Products__c</fullName>
    <label>Original Derivatives &amp; Complex Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>