unpackaged/main/default/objects/Case/fields/Original_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Original_Email_Address__c</fullName>
    <description>Captures original value of Account&#39;s Email Address</description>
    <label>Original Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>