unpackaged/main/default/objects/Case/fields/Original_Employed_associated_securities__c.field-meta.xml
<CustomField>
    <fullName>Original_Employed_associated_securities__c</fullName>
    <label>Original Employed associated securities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>