unpackaged/main/default/objects/Case/fields/Original_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Original_Employer_City__c</fullName>
    <label>Original Employer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>