unpackaged/main/default/objects/Case/fields/Original_Employer_State__c.field-meta.xml
<CustomField>
    <fullName>Original_Employer_State__c</fullName>
    <label>Original Employer State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>