unpackaged/main/default/objects/Case/fields/Original_Employer_Street__c.field-meta.xml
<CustomField>
    <fullName>Original_Employer_Street__c</fullName>
    <label>Original Employer Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>