unpackaged/main/default/objects/Case/fields/Original_Employer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Original_Employer_Zip_Code__c</fullName>
    <label>Original Employer Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>