unpackaged/main/default/objects/Case/fields/Original_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Original_Employment_Status__c</fullName>
    <label>Original Employment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>