unpackaged/main/default/objects/Case/fields/Original_Entity_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Original_Entity_Jurisdiction__c</fullName>
    <label>Original Entity Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>