unpackaged/main/default/objects/Case/fields/Original_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Entity_Type__c</fullName>
    <label>Original Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>