unpackaged/main/default/objects/Case/fields/Original_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_First_Name__c</fullName>
    <description>Captures original value of Account&#39;s First Name</description>
    <label>Original First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>