unpackaged/main/default/objects/Case/fields/Original_Formation_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Formation_Date__c</fullName>
    <label>Original Formation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>