unpackaged/main/default/objects/Case/fields/Original_Insurance_Based_Products_Experi__c.field-meta.xml
<CustomField>
    <fullName>Original_Insurance_Based_Products_Experi__c</fullName>
    <label>Original Insurance Based Products Experi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>