unpackaged/main/default/objects/Case/fields/Original_Investment_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Original_Investment_Objectives__c</fullName>
    <label>Original Investment Objectives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>