unpackaged/main/default/objects/Case/fields/Original_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Last_Name__c</fullName>
    <description>Captures original value of Account&#39;s Last Name</description>
    <label>Original Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>