unpackaged/main/default/objects/Case/fields/Original_Liquidity_Needs__c.field-meta.xml
<CustomField>
    <fullName>Original_Liquidity_Needs__c</fullName>
    <label>Original Liquidity Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>