unpackaged/main/default/objects/Case/fields/Original_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Original_Mailing_City__c</fullName>
    <label>Original Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>