unpackaged/main/default/objects/Case/fields/Original_Mailing_different_than_Permanen__c.field-meta.xml
<CustomField>
    <fullName>Original_Mailing_different_than_Permanen__c</fullName>
    <label>Original Mailing different than Permanen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>