unpackaged/main/default/objects/Case/fields/Original_Mailing_Same_as_Physical__c.field-meta.xml
<CustomField>
    <fullName>Original_Mailing_Same_as_Physical__c</fullName>
    <label>Original Mailing = Physical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>