unpackaged/main/default/objects/Case/fields/Original_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Original_Mailing_Street__c</fullName>
    <label>Original Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>