unpackaged/main/default/objects/Case/fields/Original_Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Original_Mailing_Zip_Code__c</fullName>
    <label>Original Mailing Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>