unpackaged/main/default/objects/Case/fields/Original_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Middle_Name__c</fullName>
    <label>Original Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>