unpackaged/main/default/objects/Case/fields/Original_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Name__c</fullName>
    <label>Original Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>