unpackaged/main/default/objects/Case/fields/Original_Name_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Original_Name_of_Business__c</fullName>
    <label>Original Name of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>