unpackaged/main/default/objects/Case/fields/Original_Name_of_Company_and_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Original_Name_of_Company_and_Symbol__c</fullName>
    <label>Original Company &amp; Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>