unpackaged/main/default/objects/Case/fields/Original_Name_of_Country__c.field-meta.xml
<CustomField>
    <fullName>Original_Name_of_Country__c</fullName>
    <label>Original Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>