unpackaged/main/default/objects/Case/fields/Original_Name_of_the_Employing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Original_Name_of_the_Employing_Entity__c</fullName>
    <label>Original Name of the Employing Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>