unpackaged/main/default/objects/Case/fields/Original_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Original_Occupation__c</fullName>
    <label>Original Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>