unpackaged/main/default/objects/Case/fields/Original_Officer__c.field-meta.xml
<CustomField>
    <fullName>Original_Officer__c</fullName>
    <label>Original Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>