unpackaged/main/default/objects/Case/fields/Original_Other_Experience__c.field-meta.xml
<CustomField>
    <fullName>Original_Other_Experience__c</fullName>
    <label>Original Other Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>