unpackaged/main/default/objects/Case/fields/Original_Other_Experience_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Other_Experience_Type__c</fullName>
    <label>Original Other Experience Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>