unpackaged/main/default/objects/Case/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <label>Original Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>