unpackaged/main/default/objects/Case/fields/Original_Percentage_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Original_Percentage_of_Ownership__c</fullName>
    <label>Original Ownership %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>