unpackaged/main/default/objects/Case/fields/Original_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Phone_Number__c</fullName>
    <description>Captures original value of Account&#39;s Phone Number</description>
    <label>Original Phone Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>