unpackaged/main/default/objects/Case/fields/Original_Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Original_Physical_City__c</fullName>
    <description>Captures original value of Account&#39;s Physical City</description>
    <label>Original Physical City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>