unpackaged/main/default/objects/Case/fields/Original_Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Original_Physical_State__c</fullName>
    <description>Captures original value of Account&#39;s Physical State</description>
    <label>Original Physical State</label>
    <length>5</length>
    <type>Text</type>
</CustomField>