unpackaged/main/default/objects/Case/fields/Original_Physical_Street__c.field-meta.xml
<CustomField>
    <fullName>Original_Physical_Street__c</fullName>
    <description>Captures original value of Account&#39;s Physical Street</description>
    <label>Original Physical Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>