unpackaged/main/default/objects/Case/fields/Original_Physical_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Original_Physical_Zipcode__c</fullName>
    <description>Captures original value of Account&#39;s Physical Zipcode</description>
    <label>Original Physical Zipcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>