unpackaged/main/default/objects/Case/fields/Original_Real_Assets_Experience__c.field-meta.xml
<CustomField>
    <fullName>Original_Real_Assets_Experience__c</fullName>
    <label>Original Real Assets Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>