unpackaged/main/default/objects/Case/fields/Original_Relationship_to_the_employed_fa__c.field-meta.xml
<CustomField>
    <fullName>Original_Relationship_to_the_employed_fa__c</fullName>
    <label>Original Relationship to the employed fa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>