unpackaged/main/default/objects/Case/fields/Original_Risk_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Original_Risk_Tolerance__c</fullName>
    <label>Original Risk Tolerance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>