unpackaged/main/default/objects/Case/fields/Original_Senior_Military_Governmental_Po__c.field-meta.xml
<CustomField>
    <fullName>Original_Senior_Military_Governmental_Po__c</fullName>
    <label>Original Senior Military Governmental Po</label>
    <length>255</length>
    <type>Text</type>
</CustomField>