unpackaged/main/default/objects/Case/fields/Original_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Original_Shipping_City__c</fullName>
    <label>Original Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>