unpackaged/main/default/objects/Case/fields/Original_Shipping_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Original_Shipping_State_Code__c</fullName>
    <label>Original Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>