unpackaged/main/default/objects/Case/fields/Original_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Original_Shipping_Street__c</fullName>
    <label>Original Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>