unpackaged/main/default/objects/Case/fields/Original_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Tax_ID__c</fullName>
    <label>Original Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>