unpackaged/main/default/objects/Case/fields/Original_Time_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Original_Time_Horizon__c</fullName>
    <label>Original Time Horizon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>