unpackaged/main/default/objects/Case/fields/Original_TIN_or_SSN__c.field-meta.xml
<CustomField>
    <fullName>Original_TIN_or_SSN__c</fullName>
    <label>Original TIN/SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>