unpackaged/main/default/objects/Case/fields/Original_Traditional_Securities_Experien__c.field-meta.xml
<CustomField>
    <fullName>Original_Traditional_Securities_Experien__c</fullName>
    <label>Original Traditional Securities Experien</label>
    <length>255</length>
    <type>Text</type>
</CustomField>