unpackaged/main/default/objects/Case/fields/Other_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Name__c</fullName>
    <label>Other Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>