unpackaged/main/default/objects/Case/fields/Other_Percent__c.field-meta.xml
<CustomField>
    <fullName>Other_Percent__c</fullName>
    <label>Other Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>