unpackaged/main/default/objects/Case/fields/Outside_Manager__c.field-meta.xml
<CustomField>
    <fullName>Outside_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Manager</label>
    <referenceTo>Outside_Manager__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>