unpackaged/main/default/objects/Case/fields/Owner_Group__c.field-meta.xml
<CustomField>
    <fullName>Owner_Group__c</fullName>
    <label>Owner Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Front Office</fullName>
            </value>
            <value>
                <fullName>Back Office - Operations</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>