unpackaged/main/default/objects/Case/fields/Owner_in_Asset_Management__c.field-meta.xml
<CustomField>
    <fullName>Owner_in_Asset_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner in Asset Management</label>
    <type>Checkbox</type>
</CustomField>