unpackaged/main/default/objects/Case/fields/Partial_Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Partial_Conversion_Type__c</fullName>
    <label>Partial Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
            <value>
                <fullName>Alternatives</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>