unpackaged/main/default/objects/Case/fields/PC_Total_as_of_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>PC_Total_as_of_Net_Worth__c</fullName>
    <description>Private Credit Total Amount is Asset Class as a % of Net Worth.</description>
    <label>PC Total as % of Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>