unpackaged/main/default/objects/Case/fields/PC_Total_including_Today__c.field-meta.xml
<CustomField>
    <fullName>PC_Total_including_Today__c</fullName>
    <description>Private Credit Total $ Amount in Asset Class (including Today&#39;s purchase)</description>
    <label>PC Total $ including Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>