unpackaged/main/default/objects/Case/fields/PE_Total_as_of_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>PE_Total_as_of_Net_Worth__c</fullName>
    <description>Private Equity Total Amount in Asset Class as a % of Net Worth.</description>
    <label>PE Total as % of Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>