unpackaged/main/default/objects/Case/fields/PE_Total_including_Today__c.field-meta.xml
<CustomField>
    <fullName>PE_Total_including_Today__c</fullName>
    <description>Private Equity Total $ Amount in Asset Class (including today&#39;s purchase)</description>
    <label>PE Total $ including Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>