unpackaged/main/default/objects/Case/fields/Permission_to_Liquidate__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_Liquidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission to Liquidate</label>
    <type>Checkbox</type>
</CustomField>