unpackaged/main/default/objects/Case/fields/Permission_to_Reinvest__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_Reinvest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission to Reinvest</label>
    <type>Checkbox</type>
</CustomField>