unpackaged/main/default/objects/Case/fields/Pitstop_Start__c.field-meta.xml
<CustomField>
    <fullName>Pitstop_Start__c</fullName>
    <label>Pitstop Start</label>
    <type>DateTime</type>
</CustomField>