unpackaged/main/default/objects/Case/fields/Pitstop_Total_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Pitstop_Total_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pitstop Total Minutes</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>