unpackaged/main/default/objects/Case/fields/Plan_Transferring_From__c.field-meta.xml
<CustomField>
    <fullName>Plan_Transferring_From__c</fullName>
    <label>Plan Transferring From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>