unpackaged/main/default/objects/Case/fields/Post_Case_Template__c.field-meta.xml
<CustomField>
    <fullName>Post_Case_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Case Template</label>
    <referenceTo>Case_Template__c</referenceTo>
    <relationshipLabel>Cases (Post Case Template)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>