unpackaged/main/default/objects/Case/fields/Pre_Case_Template__c.field-meta.xml
<CustomField>
    <fullName>Pre_Case_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Case Template</label>
    <referenceTo>Case_Template__c</referenceTo>
    <relationshipLabel>Cases (Pre Case Template)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>