unpackaged/main/default/objects/Case/fields/Previous_Management_Style__c.field-meta.xml
<CustomField>
    <fullName>Previous_Management_Style__c</fullName>
    <label>Previous Management Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>