unpackaged/main/default/objects/Case/fields/Previous_Task__c.field-meta.xml
<CustomField>
    <fullName>Previous_Task__c</fullName>
    <label>Previous Task</label>
    <length>18</length>
    <type>Text</type>
</CustomField>